# vulkan-minimal-compute-cpp

./: .LICENSE.swp  .gitignore  CMakeLists.txt  Makefile  README.md  compute.hlsl  main.cpp  run
.github/workflows/: cmake-build.yml
lib/: CMakeLists.txt  Makefile
lib/include/: vkmincomp.hxx
lib/src/: .stdEng.cxx.swp  .vkmincomp.cpp.swp  .vkmincomp.cxx.swp  .vkmincomp.hxx.swp  stdEng.cxx  vkmincomp.cxx  vkmincomp.hxx
quick/: .main.cxx.swp  CMakeLists.txt  Makefile  main.cxx
shaders/: compute.spv
